Theming: fixed some layout spacing issues

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_layout.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_layout.scss
@@ -46,16 +46,21 @@ body {
     }
 }
 
-#header {
-    background-color: $header-bg;
-}
-
 #page {
     overflow-x: hidden;  
 }
 
+#header {
+    background-color: $header-bg;
+}
+
 #content-wrapper {
-    min-height: 600px;
+    min-height: 300px;
+}
+
+#content {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 
 .page-main {
